# crit2

./: .clang-format  .clang-tidy  .editorconfig  meson.build
examples/: basic.ct  var.ct
includes/: utils.hpp
includes/lexer/: lexer.hpp  src.hpp  token.hpp
src/: main.cpp  meson.build
src/lexer/: lexer.cpp  meson.build  token.cpp
test/: test_lexer.cpp
test/lexer/: basic.ct  literals.ct
